// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Queries.NewsAPI] fetches an array of articles from the News API 1`] = `
Object {
  "data": Object {
    "articles": Array [
      Object {
        "author": "author",
        "id": "id",
        "image": "urlToImage",
        "publishedAt": "publishedAt",
        "source": "name",
        "title": "title",
        "url": "url",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`[Queries.NewsAPI] returns an empty array when the status isn't ok 1`] = `
Object {
  "data": Object {
    "articles": Array [],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
